@@ -68,6 +68,7 @@ Bug Fixes :
 * Removed rounding hack in OversamplesCalculator.
 * Maya intField created to display IntParameter now has step size set to 1 ( if min or max are set ).  This prevents a warning when creating fields for parameters with max - min less than the default step of 10.
 * Preventing segfaults when CompoundData and CompoundObject have items with NULL pointers.
+* Preventing segfaults when Parameter's default values are initialized with NULL pointers (or the Python None object).
 
 7.10.2 :
 
